--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome to Client Webpage</h1>
     <p>Images hosted in Amazon S3</p>
-    <img src="images/imagee1.jpeg" width="400">
-    <img src="images/imagee2.jpg" width="400">
+    <img src="images/imagee1.jpeg">
+    <img src="images/imagee2.jpg">
 </body>
 </html>
